feat: add Pomodoro timer functionality and integrate status command in MCP server

--- a/mcp-demo/package.json
+++ b/mcp-demo/package.json
@@ -18,6 +18,10 @@
       {
         "command": "mcp-demo.helloWorld",
         "title": "MCP Demo: Hello World"
+      },
+      {
+        "command": "mcp-demo.start",
+        "title": "MCP Demo: Start"
       }
     ],
     "mcpServerDefinitionProviders": [
